  * Replace debian/sysdeps/depflags.{mk,pl} by entries in debian/control
    using the "new" dpkg-dev features. Clean-out some very old entries.
  * Recommends libc6-i686 on amd64 and libc0.1-i686 on kfreebsd-amd64
    (Closes: bug#455603).
  * Don't access dpkg files directly in libc6.preinst.
  * patches/any/local-ld-multiarch.diff: convert i586 and i686 into i486
    (Closes: bug#540646).

  [ Petr Salinger ]
  * kfreebsd/local-sysdeps.diff: update to revision 2696 (from glibc-bsd).

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 09 Aug 2009 21:12:43 +0200

eglibc (2.9-23) unstable; urgency=low

  * debhelper.in/libc.postinst, sysdeps/depflags.pl: remove upgrade code
    for pre-etch installations.
  * Don't ship /etc/init.d/glibc.sh anymore: the GNU libc is now smart
    enough to print "FATAL: kernel too old" alone. This also speed up
    the boot a bit.
  * Don't ship /usr/share/doc/libc6/TODO, but keep the file in the 
    sources.
  * Don't ship /usr/share/doc/libc6/{README,PROJECT}.gz, they are 
    irrelevant for an already built GNU libc.
  * Move /usr/share/doc/libc6/{CONFORMANCE,NAMESPACE,NOTES}.gz to
    libc6-dev.
  * Move all upstream changelogs in glibc-docs, and install a small
    changelog file explaining the reason.
  * Ship README.libm in libc6-dev.
  * Update any/cvs-broken-dns.diff from upstream.
  * any/cvs-pthread_mutex_lock.diff: new patch from upstream to fix
    a memory ordering problem in pthread_mutex_{,timed}lock.
  * Replace any/submitted-signalfd-eventfd.diff by upstream version
    any/cvs-signalfd-eventfd.diff.
  * alpha/submitted-asm-memchr.diff: new patch to fix broken prefetching
    in memchr() on alpha.
  * control.in/i386: replace the Pre-Depends by a Conflicts.  Closes: 
    #538807. Update the breaks version of the packages not yet 
    transitioned.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 27 Jul 2009 15:37:54 +0200

eglibc (2.9-22) unstable; urgency=low
