@@ -16,6 +16,25 @@ Standards-Version: 3.8.2
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-glibc/glibc-package/
 Vcs-Svn: svn://svn.debian.org/pkg-glibc/glibc-package/
 
+Package: libc-bin
+Architecture: any
+Section: libs
+Priority: required
+Breaks: libc0.1 (<< 2.9), libc0.3 (<< 2.9), libc6 (<< 2.9), libc6.1 (<< 2.9)
+Replaces: libc0.1, libc0.3, libc6, libc6.1
+Description: GNU C Library: Binaries
+ This package contains utility programs related to the GNU C Library. 
+
+Package: libc-dev-bin
+Architecture: any
+Section: libdevel
+Priority: optional
+Depends: ${shlibs:Depends}
+Replaces: libc0.1-dev, libc0.3-dev, libc6-dev, libc6.1-dev
+Description: GNU C Library: Development binaries
+ This package contains utility programs related to the GNU C Library
+ development package.
+
 Package: glibc-doc
 Architecture: all
 Section: doc
