@@ -1,0 +1,13 @@
+# ldconfig must be executable even when the libc is not configured, and
+# thus must be linked statically
+libc-bin: statically-linked-binary ./sbin/ldconfig
+
+# ld.so must be executable, otherwise the system will not work
+libc-bin: shlib-with-executable-bit lib/ld-2.9.so 0755
+
+# pt_chown must be setuid root, otherwise non-root users won't be able
+# to login
+libc-bin: setuid-binary usr/lib/pt_chown 4755 root/root
+
+# libc-bin depending on libc6 make apt crazy...
+libc-bin: missing-depends-line
