@@ -1,0 +1,4 @@
+debian/tmp-libc/usr/bin/gencat usr/bin
+debian/tmp-libc/usr/bin/mtrace usr/bin
+debian/tmp-libc/usr/bin/rpcgen usr/bin
+debian/tmp-libc/usr/bin/sprof usr/bin
