@@ -1,8 +1,3 @@
-debian/tmp-libc/usr/bin/gencat usr/bin
-debian/tmp-libc/usr/bin/mtrace usr/bin
-debian/tmp-libc/usr/bin/rpcgen usr/bin
-debian/tmp-libc/usr/bin/sprof usr/bin
-
 debian/tmp-libc/usr/lib/libanl.a usr/lib
 debian/tmp-libc/usr/lib/libBrokenLocale.a usr/lib
 debian/tmp-libc/usr/lib/libbsd-compat.a usr/lib
