@@ -1,2 +1,1 @@
-etc/init.d
 etc/ld.so.conf.d
