@@ -1,0 +1,2 @@
+# libc default configuration
+/usr/local/lib
